Bug 312931 - search result names are editable
Summary: search result names are editable
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.6 (KDE 4.11)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Thibaut Gridel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-09 10:36 UTC by Bernhard Beschow
Modified: 2013-04-07 07:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2013-01-09 10:36:07 UTC
When double-clicking on a search result, the entry becomes editable while Marble jumps to the placemark's position.

Reproducible: Always

Steps to Reproduce:
1. search for something and confirm (hit enter)
2. double-click on a sarch result
Actual Results:  
the item becomes editable

Expected Results:  
the item should not become editable
Comment 1 Bernhard Beschow 2013-01-09 10:39:52 UTC
Git commit eda42540d454721a28c5abfd5eec6fa0ffcfe954 by Bernhard Beschow.
Committed on 09/01/2013 at 11:38.
Pushed by beschow into branch 'master'.

mark items as non-editable

M  +1    -1    src/lib/GeoDataTreeModel.cpp

http://commits.kde.org/marble/eda42540d454721a28c5abfd5eec6fa0ffcfe954
Comment 2 Thibaut Gridel 2013-01-09 21:08:02 UTC
Git commit 0d98facc5ea5f559b1e264433d3592e718aa77e9 by Thibaut Gridel.
Committed on 09/01/2013 at 22:03.
Pushed by tgridel into branch 'master'.

GeoDataTreeModel: make items editable for UserDocument documents

M  +19   -0    src/lib/GeoDataTreeModel.cpp

http://commits.kde.org/marble/0d98facc5ea5f559b1e264433d3592e718aa77e9