mark items as non-editable

BUG: 312931